# Amazing

./: .gitignore  README.md  config.txt  main.py  pyproject.toml  test  todo.txt  txt1
mazegen/: brutal_path.py  find_way.py  kruskal.py  maze.py  maze_checker.py  parse.py
source/: find_way.py  graphics.py  maze.py  maze_checker.py  parse.py  vector2.py  walker.py  walker_pa.py
tests/: parsing.py  validity.py
